# building_data_pipeline_with_python_and_pyspark

./: .gitignore  README.md
mentoring_1/: README.md  config.example.toml  pyproject.toml  summary.md  task_mentoring_week1.md
mentoring_1/data_pipeline_paccafe/: docker-compose.yaml
mentoring_1/notebooks/: data_profiling_quality_check.ipynb
mentoring_1/outputs/: data_profiling_report.json  data_quality_report.json
mentoring_2/: .gitignore  READ.md  README.md  plan.md  pyproject.toml  task_mentoring_week_4.md
mentoring_2/config/: .env.example
mentoring_2/data/source/: store_branch_paccofee.csv
mentoring_2/notebooks/: db_data_check.html  db_data_check.ipynb
mentoring_2/scripts/: run_pipeline.py
mentoring_2/src/paccafe_pipeline/: __init__.py
mentoring_2/src/paccafe_pipeline/config/: __init__.py  settings.py
mentoring_2/src/paccafe_pipeline/core/: __init__.py  contracts.py  exceptions.py  logging.py
mentoring_2/src/paccafe_pipeline/domain/: __init__.py  entities.py
mentoring_2/src/paccafe_pipeline/infrastructure/: __init__.py  database.py  log_repository.py  object_storage.py  sql_reader.py
mentoring_2/src/paccafe_pipeline/orchestration/: __init__.py  pipeline.py
mentoring_2/src/paccafe_pipeline/staging/: __init__.py  jobs.py
mentoring_2/src/paccafe_pipeline/warehouse/: __init__.py  jobs.py  sql.py
mentoring_2/tests/unit/: test_database_helpers.py  test_pipeline.py  test_settings.py  test_spreadsheet_copy.py
mentoring_3/: task_mentoring_3.md
mentoring_3/ans_mentoring3/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
mentoring_3/ans_mentoring3/docker/postgres/warehouse/: init.sql
mentoring_3/ans_mentoring3/docs/: latest-etl-run-summary.md
mentoring_3/ans_mentoring3/logs/: latest_profile_summary.json
mentoring_3/ans_mentoring3/script/: eda.ipynb
mentoring_3/ans_mentoring3/src/bank_etl/: __init__.py  main.py
mentoring_3/ans_mentoring3/src/bank_etl/adapters/: __init__.py  csv_reader.py  postgres_audit_repository.py  postgres_reader.py  postgres_writer.py  spark_change_detector.py  spark_profiler.py  spark_transformer.py
mentoring_3/ans_mentoring3/src/bank_etl/application/: __init__.py  etl_service.py
mentoring_3/ans_mentoring3/src/bank_etl/domain/: __init__.py  models.py
mentoring_3/ans_mentoring3/src/bank_etl/infrastructure/: __init__.py  config.py  logger.py  retry.py  spark.py
mentoring_3/ans_mentoring3/src/bank_etl/ports/: __init__.py  audit.py  profiling.py  readers.py  transformers.py  writers.py
mentoring_3/ans_mentoring3/tests/: conftest.py  test_etl_service.py  test_profiling.py  test_retry.py  test_transformer.py
mentoring_4/pac_car/: .env.example  .gitignore  README.md  docker-compose.yml  project_explanation.md  pyproject.toml  report_summary.md
mentoring_4/pac_car/dags/: car_sales_pipeline_dag.py
mentoring_4/pac_car/docker/airflow/: Dockerfile
mentoring_4/pac_car/docker/notebook/: Dockerfile
mentoring_4/pac_car/docker/pipeline/: Dockerfile
mentoring_4/pac_car/docker/spark/: Dockerfile  entrypoint.sh
mentoring_4/pac_car/notebooks/: data_exploration.ipynb
mentoring_4/pac_car/src/pac_car/: __init__.py  main.py
mentoring_4/pac_car/src/pac_car/clients/: __init__.py  database_client.py  object_storage_client.py  reference_api_client.py  spreadsheet_client.py
mentoring_4/pac_car/src/pac_car/config/: __init__.py  settings.py
(+13 files in other folders)
