[project]
name = "bank-etl-pipeline"
version = "1.0.0"
description = "Containerized PySpark ETL using hexagonal architecture"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "loguru>=0.7.3,<0.8",
    "psycopg2-binary>=2.9.10,<3",
    "pyspark==3.5.5",
    "python-dotenv>=1.1.0,<2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4,<5",
    "nbconvert>=7.16,<8",
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
