[project]
name = "pac-car"
version = "0.1.0"
description = "Clean OOP ETL and machine learning pipeline for car sales data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.34.0",
    "joblib>=1.4.0",
    "mlflow>=2.14.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "pyspark==3.5.8",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "scikit-learn>=1.4.0",
    "sqlalchemy>=2.0.30",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[project.scripts]
pac-car-pipeline = "pac_car.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pac_car"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
